--- a/src/component2/signup/signUp.css
+++ b/src/component2/signup/signUp.css
@@ -1,7 +1,7 @@
 .singUpWrapper {
   max-width: 100%;
   height: 140vh;
- 
+  background: linear-gradient(to right, #00b3b3, #ff6666);
 
 }
 .signup-form {
