--- a/src/pages/signin/createAccount.css
+++ b/src/pages/signin/createAccount.css
@@ -6,7 +6,7 @@ body {
 .containner{
   max-width: 100%;
   height: 92.4vh;
-  background: linear-gradient(to right, #00b3b3, #ff6666);
+  background: linear-gradient(to bottom,#0097d8 0%,#0eb3d4 75%);
 padding-top: 2.5%;
   
 }
@@ -32,8 +32,9 @@ padding-top: 2.5%;
   padding: 20px;
   border: 1px solid #ccc;
   border-radius: 5px;
-  background: linear-gradient(to right, #00b3b3, #ff6666);
-}
+  background: linear-gradient(to bottom,#0097d8 0%,#0eb3d4 75%);
+
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;}
 
 .create-account h2 {
   text-align: center;
