--- a/src/pages/signup/signUp.css
+++ b/src/pages/signup/signUp.css
@@ -1,12 +1,13 @@
 .singUpWrapper {
   max-width: 100%;
   height: 140vh;
-  background: linear-gradient(to right, #00b3b3, #ff6666);
+  background: linear-gradient(to bottom,#0097d8 0%,#0eb3d4 75%);
 
 }
 .signup-form {
     max-width: 600px;
-    background: linear-gradient(to right, #00b3b3, #ff6666);
+    background: linear-gradient(to bottom,#0097d8 0%,#0eb3d4 75%);
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
     border: 2px solid white;
     margin: 0 auto;
     padding: 30px 20px 30px 20px;
