--- a/src/component/caursoul/carsoul.css
+++ b/src/component/caursoul/carsoul.css
@@ -4,6 +4,14 @@
 #mainCoursoul>div>img{
     width:100%;
     height: 600px !important;
+    object-fit: cover;
+    filter: blur(2px);
+    -webkit-filter: blur(2px);
+    background-position: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    
     
 }
 .aqkh{
@@ -15,7 +23,7 @@
     z-index: 1;
     top: 50%;
     left: 15%;
-    color: #2f05e7e8;
+    color: black;
 
 }
 
