--- a/src/pages/pagesAfterLogin/Dashbord/dashbordCards/dashbordCards.css
+++ b/src/pages/pagesAfterLogin/Dashbord/dashbordCards/dashbordCards.css
@@ -33,3 +33,16 @@
     padding-left: 1%;
     margin: 5px 15px;
 }
+.waveChart{
+    display: flex;
+    padding-top: 5%;
+   
+}
+.chart{
+
+    width: 50%;
+    height: 400px;
+}
+.topUser{
+    
+}
