--- a/src/pages/pagesAfterLogin/dashbordNavbar/dashbordNav.css
+++ b/src/pages/pagesAfterLogin/dashbordNavbar/dashbordNav.css
@@ -2,6 +2,13 @@ body{
     margin: 0%;
     padding: 0%;
 }
+.navbar-logo img{
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 .dashbordnav {
     height: 60px;
     background-color: #000;
