--- a/src/pages/pagesAfterLogin/dashbordNavbar/dashbordNav.css
+++ b/src/pages/pagesAfterLogin/dashbordNavbar/dashbordNav.css
@@ -102,5 +102,27 @@ body{
     .navbar-menu.is-open {
       display: flex;
     }
+    
+  }
+  @media (min-width: 768px) and (max-width: 991.98px) {
+    .navbar-logo img{
+      width: 40px;
+      height: 40px;}
+      .navbar-item a {
+      
+        font-size: 15px;
+        
+        padding: 8px;
+      }
+      .navbar-logo a{
+        text-decoration: none;
+        font-size: 16px;
+        width: 180px;
+      }
+
+  }
+  @media (min-width: 576px) and (max-width: 767.98px) {
+    
+
   }
   
