--- a/src/pages/Services/center/center.css
+++ b/src/pages/Services/center/center.css
@@ -30,7 +30,7 @@ body{
     line-height: 1.5em;
     font-weight: 700;
     letter-spacing: .19em;
-    color: #17c8ca;
+    color:  #00b3b3;
 
 
 }
@@ -46,6 +46,7 @@ body{
     font-style: inherit;
     font-weight: inherit;
     line-height: inherit;
+    text-decoration: none;
     border: 0;
     outline: 0;
     -webkit-font-smoothing: antialiased;
@@ -62,12 +63,14 @@ body{
     height: auto;
 }
 .sc_services_item_title a{
-    color: #17c8ca;
+    color:  #00b3b3;
+    text-decoration: none;
 }
 
 .sc_services_item_description{
     margin-top: 1.2857em;
     overflow: hidden;
+    text-decoration: none;
     
 }
 .sc_services_item_title hr{
@@ -85,9 +88,10 @@ p{
 }
 
 .sc_button  {
-    background-color: #17c8ca;
+    background-color:  #00b3b3;
     color: white;
     border-radius: 3em;
+    text-decoration: none;
     margin-top: 1rem;
     margin-bottom: 1px;
     display: inline-block;
