--- a/src/pages/contactUs/contactUs.css
+++ b/src/pages/contactUs/contactUs.css
@@ -5,6 +5,9 @@
     padding: 20px;
     padding-top: 60px;
   }
+  .homeService{
+    display: flex;
+  }
   
   .top-bar {
     text-align: center;
@@ -75,7 +78,7 @@
   }
   
   button {
-    background-color: #007bff;
+    background-color:  #00b3b3;
     color: #fff;
     border: none;
     border-radius: 4px;
