--- a/src/pages/pagesAfterLogin/dashbordNavbar/dashbordNav.css
+++ b/src/pages/pagesAfterLogin/dashbordNavbar/dashbordNav.css
@@ -44,10 +44,13 @@ body{
   .Link.active {
     border-bottom: 2px solid #ece9e9;
   }
+  li.navbar-item>a.active {
+    
+    color:  black;
+    background-color: rgb(234, 234, 236);
+    
+}
   
-  .Link{
-   
-  }
   .Link{
     margin: 0% 10px; 
     color: #ffffff;
@@ -58,6 +61,7 @@ body{
   .Link:hover {
     background-color: #f7f1f1;
     color: #000;
+    text-decoration: none;
   }
   
   .navbar-logos {
