--- a/src/pages/signin/createAccount.css
+++ b/src/pages/signin/createAccount.css
@@ -2,11 +2,33 @@ body {
   margin: 0%;
   padding: 0%;
 }
+.signUpBar{
+  max-width: 100%;
+  height: 50px;
+  background-color: black;
+
+  
+  display: flex;
+  justify-content: space-between;
+  padding: 2% 6%;
+  align-items: center;
+  
+}
+.signUpLogo img{
+  width: 130px;
+  height: 55px;
+
+}
+.signUpDesc{
+  font-weight: bold;
+  font-size: 39px;
+  color: white;
+
+}
 
 .containner{
   max-width: 100%;
   height: 92.4vh;
-  background: linear-gradient(to bottom,#0097d8 0%,#0eb3d4 75%);
 padding-top: 2.5%;
   
 }
@@ -30,10 +52,8 @@ padding-top: 2.5%;
   padding-top: 3%;
   width: 320px;
   padding: 20px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  background: linear-gradient(to bottom,#0097d8 0%,#0eb3d4 75%);
-
+  border-radius: 10px;
+  border: 1px solid #181616;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;}
 
 .create-account h2 {
@@ -59,15 +79,18 @@ padding-top: 2.5%;
 
 .create-account button[type="submit"] {
   width: 100%;
-  background-color: rgb(236, 58, 34);
   color: white;
   padding: 14px 20px;
   margin-top: 20px;
   border: none;
-  border-radius: 4px;
+  background-color: black;
+  border-radius: 50px;
+
   cursor: pointer;
 }
 
 .create-account button[type="submit"]:hover {
-  background-color: red;
+  border:  1px solid black;
+  background-color: white;
+  color: black;
 }
