--- a/src/component/Navbar/Nav.css
+++ b/src/component/Navbar/Nav.css
@@ -2,6 +2,31 @@
     margin: 0;
     padding: 0;
 }
+.signUpBar{
+    max-width: 100%;
+    height: 55px;
+    background-color: black;
+    display: flex;
+    justify-content: space-between;
+    padding: 2% 6%;
+    align-items: center;
+    
+  }
+  .signUpLogo {
+    width: 200px;
+    height: 55px;
+  }
+  .signUpLogo img{
+    width: 130px;
+    height: 55px;
+  
+  }
+  .signUpDesc{
+    font-weight: bold;
+    font-size: 39px;
+    color: white;
+  
+  }
 .topbar{
     width: 100%;
     height: 50px;
@@ -11,11 +36,7 @@
     display: block;
     margin-right: 0%;
     margin-left: auto;
-    
-    
 }
-
-
 nav{
     margin: 0 auto;
     text-align: center;
