--- a/src/component/serviceCards/serviceCards.css
+++ b/src/component/serviceCards/serviceCards.css
@@ -33,3 +33,17 @@
     display: flex;
     justify-content: space-between;
 }
+.serviceFooter input[type=text] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: 1px solid #a82707;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+    outline: none;
+}
+
+input[type=text]:focus {
+    border: 3px solid rgb(19, 207, 191);
+}
