--- a/src/component/serviceCards/serviceCards.css
+++ b/src/component/serviceCards/serviceCards.css
@@ -33,7 +33,7 @@
     display: flex;
     justify-content: space-between;
 }
-.serviceFooter input[type=text] {
+.serviceFooter input[type=number] {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
@@ -44,6 +44,6 @@
     outline: none;
 }
 
-input[type=text]:focus {
+input[type=number]:focus {
     border: 3px solid rgb(19, 207, 191);
 }
